@@ -82,16 +82,4 @@ pkill -f "${pkill_path}ses-instance-one.jar"
 >${base_path}nohup.out
 nohup java -server -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms256m -Xmx256m -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -jar ${base_path}lib/ses-instance-one.jar >${base_path}nohup.out &
 echo "start project ses-instance-one success"
-##############################################################################
-#! /bin/shell
-source /etc/profile
 
-base_path="/root/java_service/jerry/"
-pkill_path="jerry/lib/"
-jar_name="ses-service-foundation"
-
-echo "starting project ${jar_name}"
-pkill -f "${pkill_path}${jar_name}.jar"
->${base_path}nohup.out
-nohup java -server -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms256m -Xmx256m -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -jar ${base_path}lib/${jar_name}.jar >${base_path}nohup.out &
-echo "start project ${jar_name} success"
